--- a/shop-client/src/main/resources/templates/securedPage.html
+++ b/shop-client/src/main/resources/templates/securedPage.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
   <meta charset="UTF-8"/>
-  <title>授权</title>
+  <title>安全页</title>
   <link rel="icon" href="https://blog.yupaits.com/avatar.jpg"/>
   <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/4.0.0/css/bootstrap.min.css"/>
 </head>
